<resources>
    <string name="first_page">首页</string>
    <string name="order">订单</string>
    <string name="community">社区</string>
    <string name="mine">个人中心</string>
    <string name="tag_mine">我的</string>
    <string name="address_manager">收货地址</string>
    <string name="serve_center">联系客服</string>
    <string name="score">欢迎评分</string>
    <string name="feedback">意见反馈</string>
    <string name="about">我要合作</string>
    <string name="more_set">我的设置</string>
    <string name="my_save">我的收藏</string>
    <string name="my_publish">我的发布</string>
    <string name="login">登录</string>
    <string name="search">搜索</string>
    <string name="cancel_location">取消</string>
    <string name="search_loc">输入地址</string>
    <string name="loc_current">定位当前位置</string>
    <string name="locate_fail">定位失败</string>
    <string name="locate_by_oneself">去手动定位</string>
    <string name="locate_reload">重新定位</string>
    <string name="search_hint">请输入商家名称</string>
    <string name="evaluate">评价</string>
    <string name="searching">正在定位,请稍候</string>
    <string name="picture_saving">保存中</string>
    <string name="picture_save_fail">保存图片失败，请重试！</string>
    <string name="picture_save_success">保存成功</string>
    <string name="loading">正在加载...</string>
    <string name="goods">商品</string>
    <string name="merchants">分类</string>
    <string name="merchants1">商家</string>
    <string name="collect">收藏</string>
    <string name="add_more_tips_text">显示下%1$d条</string>
    <string name="no_data">未获取到信息</string>
    <string name="step_over">跳 过</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="my_address">我的收货地址</string>
    <string name="add_address">新增地址</string>
    <string name="modify_address">修改地址</string>
    <string name="save">确定</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="contact">联系人\u3000</string>
    <string name="user_name">你的姓名</string>
    <string name="sir">先生</string>
    <string name="miss">女士</string>
    <string name="choose_gender">请选择性别</string>
    <string name="set_your_name">姓名不能为空</string>
    <string name="set_your_mobile">请输入正确的手机号</string>
    <string name="set_your_address">请设置收货地址</string>
    <string name="set_your_house_number">请输入您的详细地址</string>
    <string name="phone_num">联系电话</string>
    <string name="your_mobile">你的手机号</string>
    <string name="your_option_phone">备选电话</string>
    <string name="address">收货地址</string>
    <string name="address_poi">小区/写字楼/学校</string>
    <string name="houseNumber">详细地址（如门牌号等）</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="current">[当前]</string>
    <string name="search_fail">找不到地址？\n请尝试只输入小区、写字楼或学校名，\n详细地址（如门牌号）可稍后输入哦~</string>
    <string name="school">学校</string>
    <string name="village">小区</string>
    <string name="office_Building">写字楼</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="address_unreach">超出范围</string>
    <string name="dialog_address_unreach">已经超出配送范围</string>
    <string name="dialog_address_unreach_change">是否切换到<Data><![CDATA[<font color=\"#E95603\">【%s】</font>]]></Data>的商家列表（切换后之前订单信息将消失）？</string>
    <string name="dialog_address_confirm">确认切换</string>
    <string name="dialog_address_cancel">换个地址</string>
    <string name="label">标签</string>
    <string name="label_msg">公司</string>
    <string name="user_info_account">账户信息</string>
    <string name="user_info_avatar">头像</string>
    <string name="user_info_name">用户名</string>
    <string name="user_info_acount_bind">账号绑定</string>
    <string name="user_info_not_binding">未绑定</string>
    <string name="user_info_acount_bind_mobile">手机</string>
    <string name="user_info_acount_bind_weixin">微信</string>
    <string name="user_info_acount_bind_qq">QQ</string>
    <string name="user_info_acount_bind_weibo">微博</string>
    <string name="user_info_safety">安全设置</string>
    <string name="user_info_login_password">登录密码</string>
    <string name="user_info_pay_password">支付密码</string>
    <string name="user_info_password_not_setting">未设置</string>
    <string name="user_info_everyday_pay_limit">每日余额支付限额</string>
    <string name="user_info_everyday_pay_limit_msg">50元</string>
    <string name="user_info_take_photo">拍照</string>
    <string name="user_info_pick_photo">从相册选择</string>
    <string name="balance_operate_mine_balance">我的余额</string>
    <string name="balance_operate_current_balance">当前余额</string>
    <string name="balance_operate_balance_explanation">余额说明</string>
    <string name="yuan">元</string>
    <string name="withdraw">提现</string>
    <string name="balance_operate_income_detail">最近30天收支明细</string>
    <string name="balance_operate_has_no_income">暂无收支明细</string>
    <string name="complain">投诉</string>
    <string name="complain_input_your_feedback">请输入您的反馈，我们将不断为您改进，一经核实将尽快联系您</string>
    <string name="complain_input_your_phone_num">请输入您的手机号</string>
    <string name="complain_commit">提交</string>
    <string name="confirm_order">确认订单</string>
    <string name="confirm_order_fast_login">快速登录</string>
    <string name="confirm_order_input_address">请填写地址</string>
    <string name="confirm_order_arrival_time">送达时间</string>
    <string name="confirm_order_select_arrival_time">请选择送达时间</string>
    <string name="confirm_order_remark">订单备注</string>
    <string name="confirm_order_taste">口味、偏好等其他需求</string>
    <string name="confirm_order_invoice_head">发票抬头</string>
    <string name="confirm_order_not_need_invoice">不需要发票</string>
    <string name="confirm_order_redbag">使用红包</string>
    <string name="confirm_order_discount_volume">抵价卷</string>
    <string name="confirm_order_mealbox_price">餐盒费</string>
    <string name="confirm_order_delivery_price">配送费</string>
    <string name="confirm_order_delivery_method">本订单由马管家配送</string>
    <string name="confirm_order_price_standard">¥2</string>
    <string name="price_standard_zero">¥0</string>
    <string name="mix_delivery_price">¥0起送</string>
    <string name="confirm_order_delivery_destination">送至：华杰大厦</string>
    <string name="item_confirm_order_list_name">美式土豆培根比萨</string>
    <string name="item_confirm_order_list_count">x1</string>
    <string name="item_confirm_order_list_price">￥39</string>
    <string name="moren">默认</string>
    <string name="caution_hint">请输入备注内容（可不填）</string>
    <string name="caution_word_count">%s/50个字</string>
    <string name="update_username">修改用户名</string>
    <string name="update_username_confirm">确认修改</string>
    <string name="item_evaluate_list_name">精品圣女果（斤）</string>
    <string name="item_evaluate_list_driver_comment">骑手评价</string>
    <string name="item_evaluate_list_overall_evaluate">总体评价</string>
    <string name="register">注册</string>
    <string name="set">设置</string>
    <string name="clear_img_cache">清除图片缓存</string>
    <string name="non_wifi">非WIFI下图片质量</string>
    <string name="auto_update">自动下载最新安装包</string>
    <string name="push_notice">推送通知</string>
    <string name="about_mgj">关于马管家</string>
    <string name="img_cache_size">0B</string>
    <string name="wifi_state">普通</string>
    <string name="auto_update_text">仅WI-FI网络</string>
    <string name="sign_out">退出登录</string>
    <string name="notice_center">通知中心</string>
    <string name="net_abnormal">未能连接到互联网</string>
    <string name="no_favorites">您还没有收藏\n快去收藏喜欢的商家吧</string>
    <string name="reload">刷新重试</string>
    <string name="item_notice_type">您成功取消了订单</string>
    <string name="item_notice_time">03-22 10:54</string>
    <string name="item_notice_first_content">您在[鸡不可失（XX店）]下的订单</string>
    <string name="item_notice_order_num">0000000000000000</string>
    <string name="item_notice_order_cancel">，60分钟内未完成支付，已自动取消</string>
    <string name="online_pay">在线支付</string>
    <string name="online_pay_order_total_price">订单总价</string>
    <string name="online_pay_price_standard">¥0</string>
    <string name="online_pay_by_balance">余额支付</string>
    <string name="online_pay_by_third_platform">使用第三方平台支付</string>
    <string name="online_pay_balance_msg">(账户余额：0.0元)</string>
    <string name="online_pay_login_password">登陆密码</string>
    <string name="alipay">支付宝</string>
    <string name="alipay_recommend">推荐已安装支付宝客户端的用户使用</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat">微信</string>
    <string name="wechat_pay_recommend">推荐已安装微信支付客户端的用户使用</string>
    <string name="await_more_pay_method">更多支付方式敬请期待</string>
    <string name="online_pay_confirm">确认支付</string>
    <string name="classification">分类</string>
    <string name="sequence">排序</string>
    <string name="filter">筛选</string>
    <string name="recharge">充值</string>
    <string name="recharge_number_msg">充值金额：</string>
    <string name="recharge_number">50.00元</string>
    <string name="recharge_number_100">100.00元</string>
    <string name="recharge_number_200">200.00元</string>
    <string name="recharge_number_300">300.00元</string>
    <string name="recharge_number_500">500.00元</string>
    <string name="recharge_method_select">请选择支付方式</string>
    <string name="more_pay_method">更多支付方式</string>
    <string name="recharge_confirm">确认充值</string>
    <string name="login_by_sms">短信验证码登录</string>
    <string name="login_by_sms_phone_number">手机号</string>
    <string name="login_by_sms_get_code">获取验证码</string>
    <string name="login_by_sms_code">验证码</string>
    <string name="login_by_sms_start">验证并登录</string>
    <string name="login_by_third">第三方登录</string>
    <string name="weibo">微博</string>
    <string name="balance_withdraw">余额提现</string>
    <string name="withdraw_confirm">确认</string>
    <string name="withdraw_rule">每日可提现3次</string>
    <string name="useful_balance">可提现金额：</string>
    <string name="useful_balance_number">0.00</string>
    <string name="input_withdraw_number">请输入提现金额</string>
    <string name="withdraw_prompt">3个工作日内处理</string>
    <string name="withdraw_prompt1">如未提现成功请联系客服电话：400-997-4000</string>
    <string name="item_withdraw_user">用户提现</string>
    <string name="item_withdraw_time">2016-03-23</string>
    <string name="item_withdraw_balance">余额：</string>
    <string name="item_withdraw_balance_num">50.00</string>
    <string name="item_withdraw_balance_change">+50</string>
    <string name="withdraw_phone">tel:%s</string>
    <string name="withdraw_tips">暂时只支持人工提现，请拨打客服电话%s</string>
    <string name="commercial_name">--</string>
    <string name="commercial_delivery_rule">--</string>
    <string name="commercial_delivery_rule1">在线支付满30减15，满50减25</string>
    <string name="commercial_delivery_rule2">满40元赠送一盒饮料</string>
    <string name="commercial_announcement">满减规则：满49减20，满99减50</string>
    <string name="commercial_another_delivery_price">另需配送费¥5</string>
    <string name="commercial_package_price">包装费¥2</string>
    <string name="commercial_to_billing">去结算</string>
    <string name="commercial_comment_username">3******6</string>
    <string name="commercial_comment_consume_time">40分钟送达</string>
    <string name="commercial_comment_public_time">2015-12-03 23:45</string>
    <string name="commercial_comment_find_more">查看更多</string>
    <string name="balance_condition1">Q1：使用余额的条件</string>
    <string name="balance_condition1_content">为了保护账号安全，使用余额支付必须先绑定手机号</string>
    <string name="balance_condition2">Q2：余额可以怎么用</string>
    <string name="balance_condition2_content">余额可以在马管家平台上支持在线支付的商家中进行消费</string>
    <string name="back">后退</string>
</resources>