<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#00000000"
    android:gravity="center"
    android:paddingLeft="@dimen/x30"
    android:paddingRight="@dimen/x30">
    <TextView
        android:id="@+id/recharge_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x10"
        android:text="@string/recharge_number"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/x1"
        android:background="@drawable/shap_top_corner_org_bg"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_bg"/>
    <TextView
        android:id="@+id/recharge_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x10"
        android:text="@string/recharge_number_100"
        android:textColor="@color/black"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_bg"/>
    <TextView
        android:id="@+id/recharge_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x10"
        android:text="@string/recharge_number_200"
        android:textColor="@color/black"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_bg"/>
    <TextView
        android:id="@+id/recharge_300"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x10"
        android:text="@string/recharge_number_300"
        android:textColor="@color/black"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_bg"/>
    <TextView
        android:id="@+id/recharge_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x10"
        android:text="@string/recharge_number_500"
        android:textColor="@color/black"
        android:background="@drawable/shap_bottom_corner_white_bg"/>
</LinearLayout>
