<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/notice_item_layout">
    <ImageView
        android:id="@+id/notice_item_icon"
        android:layout_width="@dimen/x20"
        android:layout_height="@dimen/x20"
        android:layout_marginTop="@dimen/x10"
        android:layout_marginLeft="@dimen/x12"
        android:layout_marginRight="@dimen/x11"
        android:src="@drawable/notice_order"/>
    <ImageView
        android:id="@+id/notice_item_read_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x27"
        android:layout_marginTop="@dimen/x6"
        android:src="@drawable/notice_read_mark"/>
    <TextView
        android:id="@+id/notice_item_type_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_notice_type"
        android:layout_marginTop="@dimen/x10"
        android:textSize="15sp"
        android:textColor="#383835"
        android:layout_toRightOf="@id/notice_item_icon"/>
    <TextView
        android:id="@+id/notice_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/x12"
        android:text="@string/item_notice_time"
        android:textColor="#727272"
        android:layout_marginTop="@dimen/x12"/>
    <TextView
        android:id="@+id/notice_item_first_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/notice_item_icon"
        android:layout_below="@id/notice_item_type_prompt"
        android:text="@string/item_notice_first_content"
        android:textColor="#717171"
        android:textSize="11sp"
        android:layout_marginTop="@dimen/x8"
        android:layout_marginBottom="@dimen/x8"/>
    <LinearLayout
        android:id="@+id/notice_item_order_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/notice_item_icon"
        android:layout_below="@id/notice_item_first_text"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/x10">
        <TextView
            android:id="@+id/notice_item_order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_notice_order_num"
            android:textColor="#717171"
            android:textSize="11sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#717171"
            android:textSize="11sp"
            android:text="@string/item_notice_order_cancel"/>
    </LinearLayout>

</RelativeLayout>
