<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="@dimen/x1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/x17"
        >
        <TextView
            android:id="@+id/consume_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x12"
            android:layout_marginLeft="@dimen/x12"
            android:text="@string/item_withdraw_user"
            android:textSize="14sp"
            android:textColor="#585757"/>
        <TextView
            android:id="@+id/consume_money_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_withdraw_balance"
            android:layout_marginLeft="@dimen/x12"
            android:layout_marginTop="@dimen/x8"
            android:textSize="11sp"
            android:layout_below="@id/consume_method"
            android:textColor="#a0a0a0"/>
        <TextView
            android:id="@+id/consume_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/item_withdraw_balance_num"
            android:layout_toRightOf="@id/consume_money_mark"
            android:layout_alignBaseline="@id/consume_money_mark"
            android:layout_below="@id/consume_method"
            android:textColor="#a0a0a0"/>
        <TextView
            android:id="@+id/consume_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_withdraw_time"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x12"
            android:layout_marginTop="@dimen/x15"
            android:textSize="11sp"
            android:textColor="#a0a0a0"/>

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="元"
            android:textColor="@color/consume_up"
            android:textSize="11sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x12"
            android:layout_below="@id/consume_date"
            android:layout_marginTop="@dimen/x8"
            />
        <TextView
            android:id="@+id/consume_money_diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_withdraw_balance_change"
            android:textSize="16sp"
            android:layout_toLeftOf="@id/unit"
            android:layout_alignBaseline="@id/unit"
            android:textColor="@color/consume_up"/>
    </RelativeLayout>

</RelativeLayout>
