<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/x5"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_confirm_order_list_name"
                android:textSize="14sp"
                android:singleLine="true"
                android:textColor="@color/color_3"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/item_confirm_order_list_count"
            android:textSize="13sp"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:gravity="center"
            android:textColor="@color/color_3"
            />
        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_confirm_order_list_price"
            android:textSize="13sp"
            android:gravity="right"
            android:textColor="@color/color_3"
            />
    </LinearLayout>
</LinearLayout>